wdt/wdt-pc-front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wdt-test-pc-front-service
  namespace: wdt-test
spec:
  selector:
    app: wdt-pc-front
  ports:
  - port: 3000
    targetPort: 3000
