wdt/wdt-static-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wdt-static-service
  namespace: wdt-test
spec:
  ports:
    - port: 80
  selector:
    app: wdt-static
