wdt/wdt-docs-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wdt-docs-ingress
  namespace: wdt-test
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "false"   
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: docs.sdqyly.cn
    http:
      paths:
      - path:
        backend:
          serviceName: wdt-static-service
          servicePort: 80
